--- a/src/Raytha.Web/Areas/Admin/Views/Themes/BeginImportFromUrl.cshtml
+++ b/src/Raytha.Web/Areas/Admin/Views/Themes/BeginImportFromUrl.cshtml
@@ -18,7 +18,31 @@
                     IsWebTemplates = false,
                     IsMediaItems = false,
                 }))
-                <form asp-route="themesimportfromurl" method="post" class="py-4">
+                <form asp-route="themesimportfromurl" method="post" class="py-4" data-controller="shared--developername">
+                    <div class="col-lg-12 col-md-12">
+                        <div class="mb-3">
+                            <label class="form-label raytha-required" asp-for="Title"></label>
+                            <input type="text" class="form-control @Model.HasError("Title")" asp-for="Title"
+                                   data-shared--developername-target="title"
+                                   data-action="keyup->shared--developername#setDeveloperName change->shared--developername#setDeveloperName">
+                            <div class="invalid-feedback">@Model.ErrorMessageFor("Title")</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12">
+                        <div class="mb-3">
+                            <label class="form-label raytha-required" asp-for="DeveloperName"></label>
+                            <input type="text" class="form-control @Model.HasError("DeveloperName")" asp-for="DeveloperName" data-shared--developername-target="developername">
+                            <div class="invalid-feedback">@Model.ErrorMessageFor("DeveloperName")</div>
+                            <div class="form-text">You cannot change the developer name after it has been created.</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12">
+                        <div class="mb-3">
+                            <label class="form-label raytha-required" asp-for="Description"></label>
+                            <input type="text" class="form-control @Model.HasError("Description")" asp-for="Description">
+                            <div class="invalid-feedback">@Model.ErrorMessageFor("Description")</div>
+                        </div>
+                    </div>
                     <div class="col-lg-12 mt-2">
                         <div class="large-form-btn">
                             <label class="form-label raytha-required" asp-for="@Model.Url">Url</label>
@@ -26,7 +50,7 @@
                             <div class="invalid-feedback">@Model.ErrorMessageFor("Url")</div>
                         </div>
                     </div>
-                    <hr />
+                    <hr/>
                     <div class="col-lg-12">
                         <button type="submit" class="btn btn-success">Import</button>
                     </div>
