--- a/src/Raytha.Web/Areas/Admin/Views/ContentItems/Edit.cshtml
+++ b/src/Raytha.Web/Areas/Admin/Views/ContentItems/Edit.cshtml
@@ -10,9 +10,10 @@
 
 @section headstyles
 {
-    <link href="~/raytha_admin/css/trix.css" rel="stylesheet" />
     <link href="~/raytha_admin/css/uppy.core.css" rel="stylesheet" />
     <link href="~/raytha_admin/css/uppy.plugins.css" rel="stylesheet" />
+    <link href="~/raytha_admin/css/tiptap.editor.css" rel="stylesheet" />
+    <link href="~/raytha_admin/css/wysiwyg.container.css" rel="stylesheet" />
 }
 
 @(await Html.PartialAsync("_PageHeader", new PageHeader_ViewModel
@@ -228,18 +229,10 @@
                                 }
                                 else if (Model.FieldValues[i].FieldType == "long_text")
                                 {
-                                    <div class="col-lg-12 mt-4" id="raytha_field-@Model.FieldValues[i].DeveloperName" 
-                                     data-controller="contentitems--longtext"
-                                     data-contentitems--longtext-mimetypes-value="@Model.AllowedMimeTypes"
-                                     data-contentitems--longtext-usedirectuploadtocloud-value="@Model.UseDirectUploadToCloud"
-                                     data-contentitems--longtext-maxfilesize-value="@Model.MaxFileSize"
-                                     data-contentitems--longtext-pathbase-value="@Model.PathBase">
+                                    <div class="col-lg-12 mt-4" id="raytha_field-@Model.FieldValues[i].DeveloperName">
                                         <div class="mb-3">
                                             <label class="form-label @Model.FieldValues[i].AsteriskCssIfRequired" asp-for="@Model.FieldValues[i].Label">@Model.FieldValues[i].Label</label>
-                                            <input class="@Model.HasError(Model.FieldValues[i].DeveloperName)" id="input-@Model.FieldValues[i].DeveloperName" value="@Model.FieldValues[i].Value" type="hidden" asp-for="@Model.FieldValues[i].Value">
-                                            <trix-toolbar id="trix-toolbar-@Model.FieldValues[i].DeveloperName" data-contentitems--longtext-target="toolbar">
-                                            </trix-toolbar>
-                                            <trix-editor toolbar="trix-toolbar-@Model.FieldValues[i].DeveloperName" class="trix-content" input="input-@Model.FieldValues[i].DeveloperName" data-contentitems--longtext-target="editor" data-developername="@Model.FieldValues[i].DeveloperName"></trix-editor>
+                                            <textarea class="@Model.HasError(Model.FieldValues[i].DeveloperName) form-control" id="input-@Model.FieldValues[i].DeveloperName" value="@Model.FieldValues[i].Value" asp-for="@Model.FieldValues[i].Value"></textarea>
                                             <div class="invalid-feedback">@Model.ErrorMessageFor(Model.FieldValues[i].DeveloperName)</div>
                                             @if (!string.IsNullOrEmpty(Model.FieldValues[i].Description))
                                             {
@@ -250,12 +243,18 @@
                                 }
                                 else if (Model.FieldValues[i].FieldType == "wysiwyg")
                                 {
-                                    <div class="col-lg-12 mt-4" id="raytha_field-@Model.FieldValues[i].DeveloperName"
-                                     data-controller="contentitems--wysiwyg"
-                                     data-contentitems--wysiwyg-pathbase-value="@Model.PathBase">
+                                    <div class="col-lg-12 mt-4" id="raytha_field-@Model.FieldValues[i].DeveloperName" data-controller="tiptap--tiptap"
+                                         data-tiptap--tiptap-pathbase-value="@Model.PathBase"
+                                         data-tiptap--tiptap-mimetypes-value="@Model.AllowedMimeTypes"
+                                         data-tiptap--tiptap-usedirectuploadtocloud-value="@Model.UseDirectUploadToCloud"
+                                         data-tiptap--tiptap-maxfilesize-value="@Model.MaxFileSize">
                                         <div class="mb-3">
                                             <label class="form-label @Model.FieldValues[i].AsteriskCssIfRequired" asp-for="@Model.FieldValues[i].Label">@Model.FieldValues[i].Label</label>
-                                            <textarea data-contentitems--wysiwyg-target="editor" data-developername="@Model.FieldValues[i].DeveloperName" id="input-@Model.FieldValues[i].DeveloperName" asp-for="@Model.FieldValues[i].Value"></textarea>
+                                            <div data-tiptap--tiptap-target="editorContainer"></div>
+                                            <textarea data-tiptap--tiptap-target="editorContent"
+                                                data-developername="@Model.FieldValues[i].DeveloperName" 
+                                                id="input-@Model.FieldValues[i].DeveloperName" 
+                                                asp-for="@Model.FieldValues[i].Value" hidden></textarea>
                                             <div class="invalid-feedback">@Model.ErrorMessageFor(Model.FieldValues[i].DeveloperName)</div>
                                             @if (!string.IsNullOrEmpty(Model.FieldValues[i].Description))
                                             {
